syntax = "proto3";

package konsen;

option go_package = ".;konsen";

enum Role {
  FOLLOWER = 0;
  CANDIDATE = 1;
  LEADER = 2;
}

message AppendEntriesReq {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated bytes entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResp {
  uint64 term = 1;
  bool success = 2;
}

message RequestVoteReq {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RequestVoteResp {
  uint64 term = 1;
  bool vote_granted = 2;
}

message Log {
  uint64 index = 1;
  uint64 term = 2;
  bytes data = 3;
}

service Raft {
  // Sends "AppendEntries" request.
  rpc AppendEntries(stream AppendEntriesReq) returns (stream AppendEntriesResp) {}

  // Sends "RequestVote" request.
  rpc RequestVote(stream RequestVoteReq) returns (stream RequestVoteResp) {}
}
